[package]
name = "snips-nlu-lib"
version = "0.66.0-SNAPSHOT"
authors = [
    "Adrien Ball <adrien.ball@snips.ai>",
    "Clement Doumouro <clement.doumouro@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
    "Kevin Lefevre <kevin.lefevre@snips.ai>"
]
repository = "https://github.com/snipsco/snips-nlu-rs"
description = "Rust implementation of Snips NLU"
edition = "2018"

[workspace]
members = [
    "ffi",
    "platforms/python/ffi",
]

[dependencies]
crfsuite = { git = "https://github.com/snipsco/crfsuite-rs", tag = "0.3.1" }
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.67.1" }
snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.9.1" }
snips-nlu-parsers = { git = "https://github.com/snipsco/snips-nlu-parsers", tag = "0.4.1" }
failure = "0.1"
base64 = "0.10"
itertools = { version = "0.8", default-features = false }
log = "0.4"
lru-cache = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3"
ndarray = "0.12"
regex = "1.0"
csv = "1.0"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
chrono = "=0.4.8"

[dev-dependencies]
bencher = { git = "https://github.com/snipsco/bencher", rev = "63910ace" }
clap = "2.32"
dinghy-test = "0.4"
env_logger = "0.6"
maplit = "1.0"
fs_extra = "1.1"

[[bench]]
name = "nlu_engine"
harness = false
