[package]
name = "queries-core"
version = "0.20.0-SNAPSHOT"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>", "Kevin Lefevre <kevin.lefevre@snips.ai>"]
repository = "https://github.com/snipsco/snips-queries-rust/"
description = "Rust implementation of the Queries SDK"

[dependencies]
queries-utils = { path = "../queries-utils" }
queries-resources-packed = { path = "../queries-resources-packed" }
crfsuite = { git="ssh://git@github.com/snipsco/crfsuite-rs.git", rev = "0737b3b9" }
rustling-ontology = { git="https://github.com/snipsco/rustling-ontology/", tag="0.9.0"}
error-chain = { version = "0.10", default-features = false }
base64 = "0.6"
itertools = "0.6"
lazy_static = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ndarray = "0.9"
regex = "0.2"
csv = "0.15"
maplit = "0.1"
yolo = "*"
zip = { version = "0.2", default-features = false }

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "nlu_engine"
harness = false
