[package]
name = "queries-embed"
version = "0.30.1"
authors = [
    "Kevin Lefevre <kevin.lefevre@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>"
]

[dependencies]
queries-core = { path = "../queries-core" }
snips-queries-ontology-ffi = { git = "ssh://git@github.com/snipsco/snips-queries-ontology.git", tag = "0.5.0" }
error-chain = { version = "0.11", default-features = false }
lazy_static = "0.2"
libc = "0.2"
serde_json = "1.0"

[lib]
name = "snips_queries"
crate-type = ["staticlib", "cdylib"]
