[package]
name = "queries-resources-packed"
version = "0.27.0-SNAPSHOT"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
build = "build.rs"

[dependencies]
error-chain = { version = "0.11", default-features = false }
phf = "0.7.21"
nlu-utils = { git = "ssh://git@github.com/snipsco/nlu-utils.git", tag = "0.5.0"}

[build-dependencies]
queries-resources = { path = "../queries-resources"}
phf_codegen = "0.7.21"
