[package]
name = "queries-resources"
version = "0.21.0-SNAPSHOT"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]

[dependencies]
csv = "0.15"
error-chain = { version = "0.10", default-features = false }
itertools = "0.6"
lazy_static = "0.2"
nlu-utils = { git="https://github.com/snipsco/nlu-utils/", tag="0.2.0"}
