[package]
name = "snips-nlu-ffi"
version = "0.59.0-SNAPSHOT"
authors = [
    "Kevin Lefevre <kevin.lefevre@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>"
]

[dependencies]
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "b1f4af3" }
snips-nlu-lib = { path = "../snips-nlu-lib" }
snips-nlu-ontology-ffi-macros = { git = "https://github.com/snipsco/snips-nlu-ontology", branch = "task/gazetteer-entities" }
failure = "0.1"
lazy_static = "1.0"
libc = "0.2"
serde_json = "1.0"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]
