[package]
name = "snips-nlu-lib"
version = "0.53.3"
authors = [
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
    "Kevin Lefevre <kevin.lefevre@snips.ai>"
]
repository = "https://github.com/snipsco/snips-nlu-rs"
description = "Rust implementation of Snips NLU"

[dependencies]
snips-nlu-resources-packed = { path = "../snips-nlu-resources-packed" }
crfsuite = { git = "https://github.com/snipsco/crfsuite-rs", rev = "bf30dc0" }
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.54.0" }
snips-nlu-ontology-parsers = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.54.0" }
snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.6.0" }
dinghy-test = { git = "https://github.com/snipsco/dinghy", branch = "0.3" }
failure = "0.1"
base64 = "0.9"
itertools = { version = "0.7", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ndarray = "0.11"
regex = "0.2"
csv = "0.15"
yolo = "*"
zip = { version = "0.3", features=["deflate"] }

[dev-dependencies]
bencher = { git = "https://github.com/snipsco/bencher", rev = "63910ace" }
maplit = "1.0"

[[bench]]
name = "nlu_engine"
harness = false
