[package]
name = "snips-nlu-lib"
version = "0.58.0-SNAPSHOT"
authors = [
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
    "Kevin Lefevre <kevin.lefevre@snips.ai>"
]
repository = "https://github.com/snipsco/snips-nlu-rs"
description = "Rust implementation of Snips NLU"

[dependencies]
crfsuite = { git = "https://github.com/snipsco/crfsuite-rs", rev = "30b2ea6" }
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.57.1" }
snips-nlu-ontology-parsers = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.57.1" }
snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.6.1" }
dinghy-test = "0.3"
failure = "0.1"
base64 = "0.9"
itertools = { version = "0.7", default-features = false }
lazy_static = "1.0"
lru-cache = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3"
ndarray = "0.11"
regex = "1.0"
csv = "1.0"
zip = { version = "0.3", features=["deflate"] }

[dev-dependencies]
bencher = { git = "https://github.com/snipsco/bencher", rev = "63910ace" }
maplit = "1.0"

[[bench]]
name = "nlu_engine"
harness = false
