[package]
name = "snips-nlu-lib"
version = "0.61.0a1"
authors = [
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
    "Kevin Lefevre <kevin.lefevre@snips.ai>"
]
repository = "https://github.com/snipsco/snips-nlu-rs"
description = "Rust implementation of Snips NLU"

[dependencies]
crfsuite = { git = "https://github.com/snipsco/crfsuite-rs", rev = "30b2ea6" }
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.62.0-a1" }
snips-nlu-ontology-parsers = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.62.0-a1" }
snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.7.0" }
failure = "0.1"
base64 = "0.9"
itertools = { version = "0.7", default-features = false }
log = "0.4"
lru-cache = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3"
ndarray = "0.11"
regex = "1.0"
csv = "1.0"
zip = { version = "0.3", features=["deflate"] }

[dev-dependencies]
bencher = { git = "https://github.com/snipsco/bencher", rev = "63910ace" }
clap = "2.32"
dinghy-test = "0.3"
maplit = "1.0"
fs_extra = "1.1"

[[bench]]
name = "nlu_engine"
harness = false
