[package]
name = "snips-nlu-resources-packed"
version = "0.53.3"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
build = "build.rs"

[dependencies]
error-chain = { version = "0.11", default-features = false }
phf = { version = "0.7.21", features = ["unicase"] }
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.53.2" }

[build-dependencies]
snips-nlu-resources = { path = "../snips-nlu-resources"}
phf_codegen = "0.7.21"
