[package]
name = "snips-nlu-resources-packed"
version = "0.55.0-SNAPSHOT"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
build = "build.rs"

[dependencies]
failure = "0.1"
phf = { version = "0.7.21", features = ["unicase"] }
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.54.1" }

[build-dependencies]
snips-nlu-resources = { path = "../snips-nlu-resources"}
phf_codegen = "0.7.21"
