[package]
name = "snips-nlu-resources-packed"
version = "0.56.0"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
build = "build.rs"

[dependencies]
failure = "0.1"
lazy_static = "1.0"
phf = { version = "0.7.21", features = ["unicase"] }
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.55.0" }

[build-dependencies]
snips-nlu-resources = { path = "../snips-nlu-resources"}
phf_codegen = "0.7.21"
