[package]
name = "snips-nlu-resources"
version = "0.57.0-SNAPSHOT"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]

[dependencies]
csv = "0.15"
failure = "0.1"
itertools = { version = "0.7", default-features = false }
lazy_static = "1.0"
snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.6.1" }
