[package]
name = "snips-nlu-ffi"
version = "0.53.0-RC1-SNAPSHOT"
authors = [
    "Kevin Lefevre <kevin.lefevre@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>"
]

[dependencies]
snips-nlu-lib = { path = "../snips-nlu-lib" }
snips-nlu-ontology-ffi = { path = "../../snips-nlu-ontology/snips-nlu-ontology-ffi" }
snips-common-deps = { path = "../../snips-common/snips-common-deps" }
error-chain = { version = "0.11", default-features = false }
lazy_static = "1.0"
libc = "0.2"
serde_json = "1.0"

[lib]
name = "snips_nlu"
crate-type = ["staticlib", "cdylib"]
