[package]
name = "snips-nlu-resources-packed"
version = "0.53.0-SNAPSHOT"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
build = "build.rs"

[dependencies]
error-chain = { version = "0.11", default-features = false }
phf = { version = "0.7.21", features = ["unicase"] }
snips-nlu-ontology = { git = "ssh://git@github.com/snipsco/snips-nlu-ontology", rev = "8086bef0" }

[build-dependencies]
snips-nlu-resources = { path = "../snips-nlu-resources"}
phf_codegen = "0.7.21"
