[package]
name = "queries-core"
version = "0.52.5"
authors = [
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
    "Kevin Lefevre <kevin.lefevre@snips.ai>"
]
repository = "https://github.com/snipsco/snips-queries"
description = "Rust implementation of the Queries SDK"

[dependencies]
queries-resources-packed = { path = "../queries-resources-packed" }
snips-queries-ontology = { path="../../snips-queries-ontology" }
crfsuite = { git = "ssh://git@github.com/snipsco/crfsuite-rs", rev = "dc9b5952d652eebe14f8402c8e30c2bd2a28e477" }
rustling-ontology = { git = "https://github.com/snipsco/rustling-ontology", tag = "0.15.3" }
nlu-utils = { git = "ssh://git@github.com/snipsco/nlu-utils", tag = "0.5.1" }
error-chain = { version = "0.11", default-features = false }
base64 = "0.9"
itertools = { version = "0.7", default-features = false }
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ndarray = "0.11"
regex = "0.2"
csv = "0.15"
yolo = "*"
zip = { version = "0.3", features=["deflate"] }

[dev-dependencies]
bencher = { git = "https://github.com/snipsco/bencher", rev = "63910ace" }
maplit = "1.0"

[[bench]]
name = "nlu_engine"
harness = false
