[package]
name = "queries-embed"
version = "0.51.13"
authors = [
    "Kevin Lefevre <kevin.lefevre@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>"
]

[dependencies]
queries-core = { path = "../queries-core" }
snips-common-deps = { path = "../../snips-common/snips-common-deps" }
snips-queries-ontology-ffi = { path="../../snips-queries-ontology/snips-queries-ontology-ffi" }
error-chain = { version = "0.11", default-features = false }
lazy_static = "1.0"
libc = "0.2"
serde_json = "1.0"

[lib]
name = "snips_queries"
crate-type = ["staticlib", "cdylib"]
