[package]
name = "queries-resources-packed"
version = "0.51.17"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
build = "build.rs"

[dependencies]
error-chain = { version = "0.11", default-features = false }
phf = { version = "0.7.21", features = ["unicase"] }
nlu-utils = { git = "ssh://git@github.com/snipsco/nlu-utils", tag = "0.5.1" }

[build-dependencies]
queries-resources = { path = "../queries-resources"}
phf_codegen = "0.7.21"
