[package]
name = "queries-resources"
version = "0.50.0-SNAPSHOT"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]

[dependencies]
csv = "0.15"
error-chain = { version = "0.11", default-features = false }
itertools = "0.7"
lazy_static = "0.2"
nlu-utils = { git = "ssh://git@github.com/snipsco/nlu-utils", tag = "0.5.1" }
