[package]
name = "queries-resources"
version = "0.52.0-SNAPSHOT"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]

[dependencies]
csv = "0.15"
error-chain = { version = "0.11", default-features = false }
itertools = { version = "0.7", default-features = false }
lazy_static = "1.0"
nlu-utils = { git = "ssh://git@github.com/snipsco/nlu-utils", tag = "0.5.1" }
