[package]
name = "snips-nlu-python-ffi"
version = "0.57.0-SNAPSHOT"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]

[lib]
name = "snips_nlu_python_ffi"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "b1f4af3" }
snips-nlu-ffi = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "develop" }
